SERVER-8079 Do not overflow buffer on Yank or YankPop

Limit the amount of text yanked from the kill ring on Ctrl-Y and
Meta-Y to the space available in the buffer.  Beep if the yanked
text had to be truncated.